# StupidHTTPDownloader

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md
.github/workflows/: cmake.yml
include/StupidHTTPDownloader/: Downloader.h  UrlParser.h
src/: Downloader.cpp  UrlParser.cpp
tests/: CMakeLists.txt  tests.cpp
toolchains/: msys.cmake  osx.cmake
